# opcuax

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  benchmark.sh  draft.md  objects.toml  poster.md  pyproject.toml
benchmark/: _asyncua.py  _config.py  _helper.py  _opcuax.py  main.py  plot.py
examples/: client.py  printer.py  redis_cache.py  server.py  tutorial.py
opcuax/: __init__.py  builder.py  client.py  config.py  core.py  custom_types.py  helper.py  main.py  model.py  models.py  node.py  obj.py  redis_worker.py  server.py  settings.py  values.py  var.py
opcuax/models/: printer.py
tests/: conftest.py  models.py  test_client.py  test_construct.py  test_core.py  test_model.py  test_nodes.py  test_obj.py  test_raw.py  test_server.py  test_values.py
