[tool.poetry]
name = "opcua-server"
version = "0.1.0"
description = ""
authors = ["Jicheng Zhi <jzhi0004@student.monash.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncua = "^1.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
