[tool.poetry]
name = "opcuax"
version = "0.1.0"
description = "Simple OPC UA library based on asyncua and pydantic"
authors = ["Jicheng Zhi <jzhi0004@student.monash.edu>"]
keywords = ["opcua", "pydantic"]
readme = "README.md"
packages = [
    { include = "opcuax" },
]

[tool.poetry.dependencies]
python = "^3.11"
asyncua = "^1.0.6"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
isort = "^5.13.2"
flatdict = "^4.0.1"
pre-commit = "^3.6.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
settings = "opcuax.settings:display"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
